syntax = "proto3";

package greetpb;
option go_package = "greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest{
    Greeting  greeting = 1; 
}  

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreeResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message GreetWithDeadlineRequest {
    Greeting greeting = 1;
}

message GreetWithDeadlineResponse {
    string result = 1;
}

service GreetService {
    // unary api
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    // Server streaming api
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Client streaming 
    rpc LongGreet (stream LongGreetRequest) returns (LongGreeResponse) {};

    // BiDi Streming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};  

    // unary api with deadline
    rpc GreetWithDeadline (GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};
}